latex2mmlc/tests/snapshots/wiki_test__wiki122.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\begin{matrix} x & y \\\\ z & v \\end{matrix}"
---
<math>
    <mtable>
        <mtr>
            <mtd>
                <mi>x</mi>
            </mtd>
            <mtd>
                <mi>y</mi>
            </mtd>
        </mtr>
        <mtr>
            <mtd>
                <mi>z</mi>
            </mtd>
            <mtd>
                <mi>v</mi>
            </mtd>
        </mtr>
    </mtable>
</math>
