latex2mmlc/tests/snapshots/wiki_test__wiki131.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "f(x) \\,\\!"
---
<math>
    <mi>f</mi>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo stretchy="false">)</mo>
    <mspace width="0.1667em"/>
    <mspace width="-0.1667em"/>
</math>
